# yam_realtime

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/: deprecated_franka_robotiq_client_linear_interp.yaml  franka_osc.yaml  franka_osc_client.yaml  franka_robotiq_client.yaml  franka_robotiq_client_linear_interp.yaml  franka_robotiq_viser.yaml  franka_robotiq_viser_linear_interp.yaml  franka_viser_osc.yaml  yam_viser.yaml  yam_viser_bimanual.yaml  yam_viser_single_arm.yaml
dependencies/: pyzed-5.1-cp311-cp311-linux_x86_64.whl
robot_configs/franka/: franka_default_panda_gripper.yaml  franka_fake_gripper.yaml  franka_no_gripper.yaml  franka_robotiq_gripper.yaml  franka_robotiq_gripper_joint_ctrl.yaml
robot_configs/yam/: left.yaml  right.yaml
robots_realtime/agents/: agent.py
robots_realtime/envs/: launch.py  robot_env.py
robots_realtime/robots/: franka_joint_ctrl.py  franka_osc.py  robotiq_gripper.py
robots_realtime/scripts/: pyroki_ik_vel_cost.py  pyroki_linear_interp_client.py  pyroki_trajopt_client.py  pyroki_trajopt_example.py  take_image_zed.py  test_connection_client.py  test_connection_client_async.py  test_connection_server.py
robots_realtime/serving/: serve_pyroki_linear_interp.py  serve_pyroki_trajopt.py
robots_realtime/utils/: depth_utils.py  launch_utils.py  performance_utils.py  portal_utils.py  server_client_utils.py
yam_realtime/: __init__.py  base.py
yam_realtime/agents/: agent.py  viser_pyroki.py  viser_pyroki_agent.py
yam_realtime/camera/: camera.py  camera_utils.py  oak_camera.py  opencv_camera.py  persistent_camera.md  (+2 more)
(+52 files in other folders)
