[project]
name = "yam_realtime"
version = "0.1.0"
description = "Yam arms realtime control repo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "viser"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["yam_realtime*"]
exclude = ["configs*"]

[project.urls]
Repository = "https://github.com/uynitsuj/yam_realtime"
