[project]
name = "yam_realtime"
version = "0.1.0"
description = "A collection of realtime & high-frequency control interfaces for I2RT YAM bi-manual robot arms"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "viser",
    "omegaconf",
    "portal",
    "dm-env==1.6",
    "dm_control==1.0.30",
    "dotdict==0.1",
    "numpy==1.26.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["yam_realtime*"]
exclude = ["configs*"]

[project.urls]
Repository = "https://github.com/uynitsuj/yam_realtime"
